--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
+    "react-toastify": "^10.0.5",
     "swiper": "^11.1.11",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
