--- a/.env
+++ b/.env
@@ -1,1 +1,17 @@
 VITE_API_URL=http://localhost:8080/api
+         <Route path="/login" element={<Login />} />
+          <Route path="/register" element={<Register />} />
+          <Route path="/admin" element={<AdminLayout />}>
+            <Route path="dashboard" element={<Dashboard />} />
+            <Route path="agents" element={<Agents />} />
+            <Route path="settings" element={<Settings />} />
+            <Route path="properties" element={<Properties />} />
+
+
+import Login from "./pages/auth/Login";
+import Register from "./pages/auth/Register";
+import AdminLayout from "./components/dashboard/admin/AdminLayout";
+import Dashboard from "./pages/admin/Dashboard";
+import Agents from "./pages/admin/Agents";
+import Properties from "./pages/admin/Properties";
+import Settings from "./pages/admin/Settings";
